force-app/main/default/objects/temporal_Alumnos__c/temporal_Alumnos__c.object-meta.xml
<CustomObject>
    <label>Temporal Alumno</label>
    <nameField>
        <label>Temporal Alumno</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Alumnos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>