force-app/main/default/objects/temporal_Alumnos__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Temporal Alumnos</relationshipLabel>
    <relationshipName>Temporal_Alumnos</relationshipName>
    <type>Lookup</type>
</CustomField>