force-app/main/default/objects/temporal_Alumnos__c/fields/AL_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>AL_ALUMNO__c</fullName>
    <label>AL_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>