force-app/main/default/objects/temporal_Alumnos__c/fields/AL_ANOALTA__c.field-meta.xml
<CustomField>
    <fullName>AL_ANOALTA__c</fullName>
    <label>AL_ANOALTA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>