force-app/main/default/objects/temporal_Alumnos__c/fields/AL_BIC__c.field-meta.xml
<CustomField>
    <fullName>AL_BIC__c</fullName>
    <label>AL_BIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>