force-app/main/default/objects/temporal_Alumnos__c/fields/AL_BONOS__c.field-meta.xml
<CustomField>
    <fullName>AL_BONOS__c</fullName>
    <label>AL_BONOS</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>