force-app/main/default/objects/temporal_Alumnos__c/fields/AL_CAMBIC__c.field-meta.xml
<CustomField>
    <fullName>AL_CAMBIC__c</fullName>
    <label>AL_CAMBIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>