force-app/main/default/objects/temporal_Alumnos__c/fields/AL_CODPOS__c.field-meta.xml
<CustomField>
    <fullName>AL_CODPOS__c</fullName>
    <label>AL_CODPOS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>