force-app/main/default/objects/temporal_Alumnos__c/fields/AL_CONOCE__c.field-meta.xml
<CustomField>
    <fullName>AL_CONOCE__c</fullName>
    <label>AL_CONOCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>