force-app/main/default/objects/temporal_Alumnos__c/fields/AL_CPAIS__c.field-meta.xml
<CustomField>
    <fullName>AL_CPAIS__c</fullName>
    <label>AL_CPAIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>