force-app/main/default/objects/temporal_Alumnos__c/fields/AL_DIR1__c.field-meta.xml
<CustomField>
    <fullName>AL_DIR1__c</fullName>
    <label>AL_DIR1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>