force-app/main/default/objects/temporal_Alumnos__c/fields/AL_DIR2__c.field-meta.xml
<CustomField>
    <fullName>AL_DIR2__c</fullName>
    <label>AL_DIR2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>