force-app/main/default/objects/temporal_Alumnos__c/fields/AL_EMILIO__c.field-meta.xml
<CustomField>
    <fullName>AL_EMILIO__c</fullName>
    <label>AL_EMILIO</label>
    <type>Email</type>
</CustomField>