force-app/main/default/objects/temporal_Alumnos__c/fields/AL_FECBON__c.field-meta.xml
<CustomField>
    <fullName>AL_FECBON__c</fullName>
    <label>AL_FECBON</label>
    <type>Date</type>
</CustomField>