force-app/main/default/objects/temporal_Alumnos__c/fields/AL_FECNAC__c.field-meta.xml
<CustomField>
    <fullName>AL_FECNAC__c</fullName>
    <label>AL_FECNAC</label>
    <type>Date</type>
</CustomField>