force-app/main/default/objects/temporal_Alumnos__c/fields/AL_IBAN__c.field-meta.xml
<CustomField>
    <fullName>AL_IBAN__c</fullName>
    <label>AL_IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>