force-app/main/default/objects/temporal_Alumnos__c/fields/AL_INVERSO__c.field-meta.xml
<CustomField>
    <fullName>AL_INVERSO__c</fullName>
    <label>AL_INVERSO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>