force-app/main/default/objects/temporal_Alumnos__c/fields/AL_MANDATO__c.field-meta.xml
<CustomField>
    <fullName>AL_MANDATO__c</fullName>
    <label>AL_MANDATO</label>
    <type>Date</type>
</CustomField>