force-app/main/default/objects/temporal_Alumnos__c/fields/AL_MARCAS__c.field-meta.xml
<CustomField>
    <fullName>AL_MARCAS__c</fullName>
    <label>AL_MARCAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>