force-app/main/default/objects/temporal_Alumnos__c/fields/AL_MOTE__c.field-meta.xml
<CustomField>
    <fullName>AL_MOTE__c</fullName>
    <label>AL_MOTE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>