force-app/main/default/objects/temporal_Alumnos__c/fields/AL_NIF__c.field-meta.xml
<CustomField>
    <fullName>AL_NIF__c</fullName>
    <label>AL_NIF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>