force-app/main/default/objects/temporal_Alumnos__c/fields/AL_NIF_OK__c.field-meta.xml
<CustomField>
    <fullName>AL_NIF_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AL_NIF_OK</label>
    <type>Checkbox</type>
</CustomField>