force-app/main/default/objects/temporal_Alumnos__c/fields/AL_NOMBRE__c.field-meta.xml
<CustomField>
    <fullName>AL_NOMBRE__c</fullName>
    <label>AL_NOMBRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>