force-app/main/default/objects/temporal_Alumnos__c/fields/AL_NUM_TEL__c.field-meta.xml
<CustomField>
    <fullName>AL_NUM_TEL__c</fullName>
    <label>AL_NUM_TEL</label>
    <length>5</length>
    <type>Text</type>
</CustomField>