force-app/main/default/objects/temporal_Alumnos__c/fields/AL_NUMEROS__c.field-meta.xml
<CustomField>
    <fullName>AL_NUMEROS__c</fullName>
    <label>AL_NUMEROS</label>
    <type>Phone</type>
</CustomField>