force-app/main/default/objects/temporal_Alumnos__c/fields/AL_PAIS__c.field-meta.xml
<CustomField>
    <fullName>AL_PAIS__c</fullName>
    <label>AL_PAIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>