force-app/main/default/objects/temporal_Alumnos__c/fields/AL_PRIREC__c.field-meta.xml
<CustomField>
    <fullName>AL_PRIREC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AL_PRIREC</label>
    <type>Checkbox</type>
</CustomField>