force-app/main/default/objects/temporal_Alumnos__c/fields/AL_ROOT_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>AL_ROOT_EMAIL__c</fullName>
    <label>AL_ROOT_EMAIL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>