force-app/main/default/objects/temporal_Alumnos__c/fields/AL_ROOT_PHONE__c.field-meta.xml
<CustomField>
    <fullName>AL_ROOT_PHONE__c</fullName>
    <label>AL_ROOT_PHONE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>