force-app/main/default/objects/temporal_Alumnos__c/fields/AL_SEXO__c.field-meta.xml
<CustomField>
    <fullName>AL_SEXO__c</fullName>
    <label>AL_SEXO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>