force-app/main/default/objects/temporal_Alumnos__c/fields/AL_STATUS__c.field-meta.xml
<CustomField>
    <fullName>AL_STATUS__c</fullName>
    <label>AL_STATUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>