force-app/main/default/objects/temporal_Alumnos__c/fields/AL_TITBAN__c.field-meta.xml
<CustomField>
    <fullName>AL_TITBAN__c</fullName>
    <label>AL_TITBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>