force-app/main/default/objects/temporal_Alumnos__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Temporal Alumnos</relationshipLabel>
    <relationshipName>Temporal_Alumnos</relationshipName>
    <type>Lookup</type>
</CustomField>