force-app/main/default/objects/temporal_Alumnos__c/fields/CR_INIC__c.field-meta.xml
<CustomField>
    <fullName>CR_INIC__c</fullName>
    <label>CR_INIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>