force-app/main/default/objects/temporal_Alumnos__c/fields/CR_N3__c.field-meta.xml
<CustomField>
    <fullName>CR_N3__c</fullName>
    <label>CR_N3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>