force-app/main/default/objects/temporal_Alumnos__c/fields/CR_N4__c.field-meta.xml
<CustomField>
    <fullName>CR_N4__c</fullName>
    <label>CR_N4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>