force-app/main/default/objects/temporal_Alumnos__c/fields/CR_PERF__c.field-meta.xml
<CustomField>
    <fullName>CR_PERF__c</fullName>
    <label>CR_PERF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>