force-app/main/default/objects/temporal_Alumnos__c/fields/Descripcion_del_Error__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_del_Error__c</fullName>
    <label>Descripcion del Error</label>
    <length>254</length>
    <type>Text</type>
</CustomField>