force-app/main/default/objects/temporal_Alumnos__c/fields/NoSocio__c.field-meta.xml
<CustomField>
    <fullName>NoSocio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NoSocio</label>
    <type>Checkbox</type>
</CustomField>