force-app/main/default/objects/temporal_Alumnos__c/fields/NUM_FIANZAS_OK__c.field-meta.xml
<CustomField>
    <fullName>NUM_FIANZAS_OK__c</fullName>
    <label>NUM_FIANZAS_OK</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>