force-app/main/default/objects/temporal_Alumnos__c/fields/NUM_MATRICULAS__c.field-meta.xml
<CustomField>
    <fullName>NUM_MATRICULAS__c</fullName>
    <label>NUM_MATRICULAS</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>