force-app/main/default/objects/temporal_Alumnos__c/fields/SF_APELLIDOS__c.field-meta.xml
<CustomField>
    <fullName>SF_APELLIDOS__c</fullName>
    <label>SF_APELLIDOS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>