force-app/main/default/objects/temporal_Alumnos__c/fields/SF_NOMBRE__c.field-meta.xml
<CustomField>
    <fullName>SF_NOMBRE__c</fullName>
    <label>SF_NOMBRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>