force-app/main/default/objects/temporal_Alumnos__c/fields/SUM_ALUMN_OK__c.field-meta.xml
<CustomField>
    <fullName>SUM_ALUMN_OK__c</fullName>
    <label>SUM_ALUMN_OK</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>