force-app/main/default/objects/temporal_Alumnos__c/fields/VERANO_2025__c.field-meta.xml
<CustomField>
    <fullName>VERANO_2025__c</fullName>
    <label>VERANO_2025</label>
    <length>255</length>
    <type>Text</type>
</CustomField>