force-app/main/default/objects/temporal_Alumnos__c/fields/VL_AUT__c.field-meta.xml
<CustomField>
    <fullName>VL_AUT__c</fullName>
    <label>VL_AUT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>