force-app/main/default/objects/temporal_Alumnos__c/fields/VL_INIC__c.field-meta.xml
<CustomField>
    <fullName>VL_INIC__c</fullName>
    <label>VL_INIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>