force-app/main/default/objects/temporal_Alumnos__c/fields/VL_MB__c.field-meta.xml
<CustomField>
    <fullName>VL_MB__c</fullName>
    <label>VL_MB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>