force-app/main/default/objects/temporal_Alumnos__c/fields/VL_PERF__c.field-meta.xml
<CustomField>
    <fullName>VL_PERF__c</fullName>
    <label>VL_PERF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>