force-app/main/default/objects/temporal_Alumnos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AL_ALUMNO__c</columns>
    <columns>AL_NOMBRE__c</columns>
    <columns>SF_NOMBRE__c</columns>
    <columns>SF_APELLIDOS__c</columns>
    <columns>AL_NIF__c</columns>
    <columns>AL_NIF_OK__c</columns>
    <columns>NoSocio__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>Descripcion_del_Error__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>notEqual</operation>
        <value>Procesado</value>
    </filters>
    <label>All Records</label>
</ListView>